update the document and deployment scripts